Changes for 1.7.0

 - [DEV-416] new simple check `icmppingloss' added; ICMP ckecks now support additional parameters (Dmitry)
 - [DEV-9] added support of global, template and host level macros on the server side (Sasha)
 - [DEV-414] created basic man pages for all Zabbix binaries (Alexei)
 - [DEV-340] auto registration of active agents (Sasha)
 - [DEV-137] sql file "data.sql" was fixed, a default value was added (Dmitry)
 - [DEV-137] sql file "data.sql" was fixed, some default values were added (Dmitry)
 - [DEV-412] improved timeline in charts (Artem)
 - [DEV-353] Discovery: added support of IP masks (Sasha) 
 - [DEV-137] poller will continue processing of other items after enabling a host (Alexei)
 - [DEV-137] modifed Makefile to use tr instead of sed for better compatibility (Alexei)
 - [DEV-339] added a dummy function for DB cache monitoring (Alexei)
 - [DEV-411] database cache is enabled by default now (Alexei)
 - [DEV-399] added information about monitored hosts to the discovery screen (Sasha)
 - [DEV-358] added notification macros {NODE.*[1..9]} (Sasha)
 - [DEV-358] added notification macros {ITEM.LOG.*[1..9]} (Sasha)
 - [DEV-358] added notification macros {ITEM.VALUE} and {ITEM.VALUE[1..9]} (Sasha)
 - [DEV-358] added notification/trigger description macros {ITEM.LASTVALUE[1..9]} (Sasha)
 - [DEV-358] added notification macros {HOST.CONN[1..9]} {HOST.DNS[1..9]} {IPADDRESS[1..9]} (Sasha)
 - [DEV-358] added notification macros {TRIGGER.KEY[1..9]} (Sasha)
 - [DEV-358] added notification/trigger description macros {HOSTNAME[1..9]} (Sasha)
 - [DEV-358] added notification macros {ITEM.NAME[1..9]} (Sasha)
 - [DEV-358] added notification macros {PROFILE.*[1..9]} (Sasha)
 - [DEV-405] added highlighting of selected rows (Artem)
 - [DEV-397] added user name to output of {ESC.HISTORY} macros (Sasha)
 - [DEV-397] added notification macros {EVENT.ACK.STATUS} and {EVENT.ACK.HISTORY} (Sasha)
 - [DEV-405] Proxies, Nodes moved under "Administration->DM" (Artem)