@@ -1,5 +1,6 @@
 Changes for 1.7.0
 
+ - [DEV-325] new check for DNS `net.tcp.dns.query' wad added; added additional `type' parameter (Dmitry)
  - [DEV-416] new simple check `icmppingloss' added; ICMP ckecks now support additional parameters (Dmitry)
  - [DEV-9] added support of global, template and host level macros on the server side (Sasha)
  - [DEV-414] created basic man pages for all Zabbix binaries (Alexei)
